<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SlideShareApp</string>
    <string name="action_settings">Settings</string>
    <string name="enterEditText">Enter the userId</string>
    <string name="find">Find</string>
    <string name="searches">Your previous searches</string>
    <string name="check">Check</string>
    <string name="delete">Delete all</string>
    <string name="intro">Find SlideShare publications by userId</string>
    <string name="title">Title:</string>
    <string name="pubDate">Publication date:</string>
    <string name="author">UserId: </string>
    <string name="linkTo">Direkt link:</string>
    <string name="title_activity_stock_info">StockInfoActivity</string>

</resources>