<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:padding="@dimen/activity_horizontal_margin"
            android:text="Medium Text"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/blue" />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/title"
            android:textColor="@color/blue" />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/pubDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/pubDate"
            android:textColor="@color/blue" />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/linkTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/linkTo"
            android:textColor="@color/blue" />
    </TableRow>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

</TableLayout>